# Design-assistant-agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  Readme.md  chat.sh  docker-compose.dev.yaml  docker-compose.test.yml  docker-compose.yaml  docker-entrypoint.sh  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_figma.bat
agent/: README.md  main.py  requirements.txt
agent-config/: system-prompt.txt
mcp_rag/: cache_service.py  main.py  npm_registry.py  rag_service.py  requirements.txt  storybook_parser.py
schemas/: schemas.json
src/: a2a_agent.py  agent.py  agent_task_manager.py  config.py  ds_parser.py  figma_api.py  figma_client.py  mcp_instance.py  metrics.py  server.py  start_a2a.py  tokens_parser.py  utils.py  validators.py
src/tools/: __init__.py  analyze_layout.py  composite_tool.py  config.py  ds_tool.py  get_design_system.py  layout_tool.py  map_components.py  scan_git.py  styles_tool.py  test_ds_tool.py
test/: run_stdio.bat  server_stdio.py
tests/: conftest.py  test_a2a_agent.py  test_agent.py  test_agent_task_manager.py  test_integration.py
