[project]
name = "mcp-figma-kontur"
version = "0.1.0"
description = "MCP сервер для сканирования Figma дизайн-системы Kontur UI и генерации кода"
authors = [
    {name = "Роман", email = "roman@hackathon.example"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastmcp>=2.10.0,<3.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "prometheus-client>=0.21.0,<1.0.0",
    "opentelemetry-api>=1.27.0,<2.0.0",
    "opentelemetry-sdk>=1.27.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "prometheus_client.*",
    "opentelemetry.*",
    "httpx.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py312']